@@ -1,5 +1,7 @@
 Release 1.2 (2011-x)
 	* Fix DB schema to allow full UTF8 strings. Database changes needed
+	* Add localization support
+	* Login page now shows correct logo
 
 Release 1.1.1 (2011-09-24)
 	* Fix DB schema. Wasn't properlty updated on sql/schema.sql, which
